# rive-animation-viewer

./: .dependency-cruiser.cjs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  app.js  architecture-budget.json  index.html  manifest.webmanifest  mcp-bridge.js  package-lock.json  package.json  player design.pen  service-worker.js  style.css  vite.config.js  vitest.config.js  vm-explorer-snippet.js
.github/: RELEASE.md
.github/workflows/: release.yml
icons/RiveAnimationViewer.icon/: icon.json
labs/window-chrome-lab/: package.json
labs/window-chrome-lab/src-tauri/: Cargo.toml  tauri.conf.json
labs/window-chrome-lab/src-tauri/capabilities/: default.json
labs/window-chrome-lab/src-tauri/src/: main.rs
mcp-server/: README.md  bridge.js  config.js  index.js  instructions.js  package-lock.json  package.json
mcp-server/tools/: core-tools.js  editor-tools.js  index.js
reports/: 2026-04-01-rav-codebase-audit.md  2026-04-01-rav-modularization-plan.md  2026-04-01-worktree-handoff.md
scripts/: build-dist.mjs  build-mcp-sidecar.mjs  bump-version.mjs  bundle-codemirror.mjs  bundle-mcp-server.mjs  check-architecture.mjs  generate-snippet-modules.mjs  generate-updater-manifest.mjs  prepare-vitest-ui-theme.mjs  serve-static.mjs  sync-version.mjs  theme-coverage-report.mjs
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: rav-mcp-server.js
src-tauri/src/: demo-template.html  main.rs
src-tauri/src/app/: constants.rs  demo_bundle.rs  mod.rs  node_runtime.rs  state.rs  support.rs  updater.rs  window_controls.rs
src-tauri/src/app/mcp/: bridge.rs  client_config.rs  client_install.rs  commands.rs  mod.rs
src-tauri/src/app/window/: controls.rs
src-tauri/src/demo-template/: markup.html  shell.html
src-tauri/src/demo-template/css/: base.css  controls.css  event-log.css  overlays.css  properties.css  runtime-layout.css
src-tauri/src/demo-template/js/: bootstrap.js  event-log.js  playback-layout.js  preamble.js  rive-loader.js  settings.js  vm-accessors.js  vm-controls-render.js  vm-hierarchy.js  vm-sync.js
src-tauri/src/demo-template/js/core/: bootstrap.js  event-log.js  layout.js  preamble.js  rive-loader.js
src-tauri/src/demo-template/js/vm/: accessors.js  hierarchy.js
src/app/: main-entry.js
styles/: 00-base.css  01-header-controls.css  01-header-meta.css  01-header.css  01-window-chrome.css  02-settings.css  03-workspace.css  04-runtime-strip.css  05-instantiation-dialog.css  05-mcp-dialog.css  06-layout-controls.css  07-properties.css  08-event-log.css  09-overlays-responsive.css  09-script-console.css  10-about-dialog.css
tests/: setup.js
tests/smoke/: frontend-modules.smoke.test.js  html-entrypoints.smoke.test.js  (+1 more)
web/: .gitignore  .lighthouserc.json  CHANGELOG.md  eslint.config.mjs  indexnow.txt  next.config.ts  package-lock.json  package.json
(+186 files in other folders)
