[package]
name = "app"
version = "1.7.1"
description = "A Tauri App"
authors = ["IVG Design"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.2", features = ["macos-private-api"] }
tauri-plugin-single-instance = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
