[package]
name = "app"
version = "1.9.9"
description = "A Tauri App"
authors = ["IVG Design"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.2", features = ["macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = "0.24"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
