[package]
name = "app"
version = "2.1.1"
description = "A Tauri App"
authors = ["IVG Design"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.2", features = ["macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = "0.24"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSView", "NSWindow", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
