[package]
name = "window-chrome-lab"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.2", features = [] }
tokio = { version = "1.46", features = ["time"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
